# ST-2

include/: circle.h  tasks.h
src/: CMakeLists.txt  circle.cpp  main.cpp  tasks.cpp
test/: CMakeLists.txt  tests.cpp
